<resources>
    <string name="app_name">AlbumApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Nome</string>
    <string name="hint_password">Senha</string>
    <string name="hint_email">Email</string>
    <string name="label_save">Salvar</string>
    <string name="title_register">Dados do usuário</string>
    <string name="label_login">Entrar</string>
    <string name="disclaimer_register">Cadastre-se</string>
    <string name="title_login">Login</string>
    <string name="label_no">Não</string>
    <string name="label_yes">Sim</string>
    <string name="disclamer_delete_user">Deseja deletar o usuário selecionado?</string>
    <string name="label_name">Nome:</string>
    <string name="label_email">Email:</string>
    <string name="disclaimer_user">Usuário atualmente logado:</string>
    <string name="label_all_users">Todos os usuários:</string>
    <string name="disclaimer_no_users">Todos os usuários foram deletados, cadastre um novo usuário para prosseguir.</string>
    <string name="title_albums">Albuns</string>
</resources>
